[gd_scene load_steps=5 format=3 uid="uid://i3vl3xgmbejs"]

[ext_resource type="Script" path="res://UserInterface/MainMenuOptions.gd" id="1_7b27e"]

[sub_resource type="Theme" id="Theme_kg7lu"]

[sub_resource type="LabelSettings" id="LabelSettings_3nydg"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_s7oyh"]
font_size = 36

[node name="MainMenuOptions" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.262745, 0.34902, 0.631373)
script = ExtResource("1_7b27e")
MainMenu = "res://UserInterface/MainMenu.tscn"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = -329.0
offset_right = 249.0
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_kg7lu")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center]Options[/center]"
fit_content_height = true
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -26.0
offset_right = 133.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume"
label_settings = SubResource("LabelSettings_3nydg")
horizontal_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10.0
value = 5.0
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="SoundVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sound Volume"
label_settings = SubResource("LabelSettings_s7oyh")
horizontal_alignment = 1

[node name="SoundVolumeSlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10.0
value = 5.0
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "

"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "
Back To Main Menu

"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="value_changed" from="VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="VBoxContainer/SoundVolumeSlider" to="." method="_on_sound_volume_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
